# mtgo-collection-manager

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  Taskfile.yml  build.env
.cargo/: config.toml
.devcontainer/: .dockerignore  Dockerfile
.github/workflows/: CI.yml  integration-ci.yml  mtgoparser-ci.yml  mtgoupdater-ci.yml
build-util/: boost-exclude-libs.txt
just-util/: default_just_vars.just  mod.just
just-util/dont_import/: pretty_print.just
mtgogetter/: Cargo.toml
mtgogetter-rs/: Cargo.toml
mtgogetter-rs/src/: lib.rs  scryfall_parse.rs  state_log.rs
mtgogetter-rs/src/scryfall_parse/: bulk_info.rs
mtgogetter-rs/src/state_log/: goatbots_md.rs  scryfall_md.rs
mtgogetter-rs/src/state_log/scryfall_md/: next_released_mtgo_set.rs
mtgogetter/get_goatbots/: Cargo.toml
mtgogetter/get_goatbots/src/: lib.rs
mtgogetter/get_scryfall/: Cargo.toml
mtgogetter/src/: fetch_log.rs  lib.rs
mtgogetter/src/fetch_log/: goatbots_md.rs
mtgogetter_rs/: Cargo.toml
mtgogetter_rs/get_goatbots/: Cargo.toml
mtgogetter_rs/get_goatbots/src/: lib.rs
mtgogetter_rs/get_scryfall/: Cargo.toml
mtgogetter_rs/get_scryfall/src/: bulk_cards.rs  bulk_info.rs  lib.rs  sets.rs  util.rs
mtgogetter_rs/src/: fetch_log.rs  lib.rs  state_log.rs
mtgogetter_rs/src/fetch_log/: goatbots_md.rs  scryfall_md.rs
mtgogetter_rs/src/fetch_log/scryfall_md/: next_released_mtgo_set.rs
mtgogetter_rs/src/state_log/: goatbots_md.rs  scryfall_md.rs
mtgogui/: Cargo.toml  Tasks.yml  build.rs
mtgogui/.cargo/: config.toml
mtgogui/src/: appdata.rs  collection.rs  ctrlc_handler.rs  gui.rs  main.rs  menubar.rs  util.rs
mtgogui/src/appdata/: metadata.rs  paths.rs  state.rs  update.rs  util.rs
mtgogui/src/collection/: processor.rs  stats.rs
mtgogui/src/collection/stats/: container.rs  items.rs
mtgogui/src/collection/view/: table.rs
mtgogui/src/collection/view/table/: util.rs
mtgogui/src/gui/: setup.rs
mtgogui/src/menubar/: about.rs  setup.rs  util.rs
mtgogui/src/menubar/about/: text.rs
mtgoparser/: CMakeLists.txt  Cargo.toml  Dependencies.cmake  Tasks.yml
mtgoparser-rs/: Cargo.toml
mtgoparser-rs/src/: collection.rs  goatbots.rs  lib.rs  mtgo_card.rs  scryfall.rs  util.rs  xml.rs
mtgoparser-rs/src/goatbots/: card_definitions.rs  price_history.rs
mtgoparser-rs/src/mtgo_card/: card_history.rs  collection_history.rs
mtgoparser-rs/src/scryfall/: default_cards.rs
mtgoparser-rs/tests/: mtgoparser-rs.rs
mtgoparser/include/mtgoparser/io/: compression.hpp  gzip.hpp
mtgoparser/parse_goatbots/src/: price_history.rs
mtgoparser/src/: lib.rs
mtgoparser/src/mtgo_card/: card_history.rs  collection_history.rs
mtgoparser/src/mtgo_card/card_history/: price_history_tracker.rs
mtgoparser/src/mtgo_preprocessor/: CMakeLists.txt
mtgoparser/test/: CMakeLists.txt  tests.cpp
mtgoparser/tests/: mtgoparser.rs  mtgoparser_history.rs
mtgoparser/tests/util/: mod.rs
mtgoparser_rs/: Cargo.toml
mtgoparser_rs/parse_goatbots/: Cargo.toml
mtgoparser_rs/parse_goatbots/src/: card_definitions.rs
mtgoparser_rs/parse_scryfall/: Cargo.toml
mtgoparser_rs/parse_scryfall/src/: lib.rs
mtgoparser_rs/src/: collection.rs  lib.rs  mtgo_card.rs  scryfall.rs  util.rs  xml.rs
mtgoparser_rs/src/mtgo_card/: card_history.rs
mtgoparser_rs/tests/: mtgoparser_rs.rs
mtgoupdater/: Cargo.toml
mtgoupdater/src/: internal_only.rs  lib.rs  mtgo_preprocessor_api.rs  mtgogetter_api.rs  new_update_all.rs  zip_util.rs
mtgoupdater/tests/: mtgoupdater_mtgo_preprocessor.rs  mtgoupdater_mtgoparser-rs.rs  mtgoupdater_mtgoparser.rs
test/test-data/mtgogetter-out/: README.md  fetch_log.toml
