[workspace]
members = ["mtgogui", "mtgoupdater", "mtgoparser-rs", "mtgogetter-rs"]
resolver = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.1.0"
authors = ["Marc Beck König <mbkj@tutamail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CramBL/mtgo-collection-manager"


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
# Run time
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4"

toml = "0.8.6"

quick-xml = "0.31.0"

zip = "1.2.1"

chrono = { version = "0.4.31", features = ["serde"] }
url = "2.4.1"
regex = "1.10.2"
once_cell = "1.18.0"

# Dev dependencies
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
testresult = "0.4.0"
