[workspace]
resolver = "2"
members = [
    "mtgogui",
    "mtgoupdater",
    "mtgoparser_rs",
    "mtgoparser_rs/parse_scryfall",
    "mtgoparser_rs/parse_goatbots",
    "mtgogetter_rs",
    "mtgogetter_rs/get_scryfall",
    "mtgogetter_rs/get_goatbots",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = ["Marc Beck König <mbkj@tutamail.com>"]
repository = "https://github.com/CramBL/mtgo-collection-manager"
keywords = ["mtgo"]


[workspace.lints.rust]
unsafe_code = "forbid"


[workspace.dependencies]
# Runtime
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.8.1"
log = "0.4"

toml = "0.8.6"
quick-xml = "0.31.0"
zip = "2.1.0"

chrono = { version = "0.4.31", features = ["serde"] }
url = "2.4.1"
regex = "1.10.2"
once_cell = "1.18.0"

# Developer but technically in production code
stderrlog = "0.6.0"

# Dev-only dependencies
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
testresult = "0.4.0"
assert_fs = "1.0.13"
assert_cmd = "2.0.11"
predicates = "3.0.3"
