[package]
name = "mtgogetter-rs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
zip.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
temp-dir.workspace = true
testresult.workspace = true

[lints]
workspace = true
