[package]
name = "mtgogetter_rs"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get_scryfall = { version = "*", path = "get_scryfall" }
get_goatbots = { version = "*", path = "get_goatbots" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
zip.workspace = true
regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
temp-dir.workspace = true
testresult.workspace = true

[lints]
workspace = true
