[package]
name = "mtgogui"
edition = "2021"
version.workspace = true
authors.workspace = true

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.4.21" }                                         #, features = ["fltk-bundled"] }
fltk-flex = "0.2.1"
fltk-grid = "0.4.0"
fltk-table = "0.3.1"
fltk-theme = "0.7.2"
mtgoupdater = { version = "0.1.0", path = "../mtgoupdater" }
url = "2.4.1"
flexi_logger = { version = "0.27", features = ["async", "specfile"] }
log = "0.4"
serde = "1.0.190"
toml = "0.8.6"
serde_derive = "1.0.190"
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.2"
once_cell = "1.18.0"

[dev-dependencies]
pretty_assertions.workspace = true
temp-dir.workspace = true
