[package]
name = "mtgogui"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtgoupdater = { version = "0.1.0", path = "../mtgoupdater" }
mtgogetter_rs = { version = "*", path = "../mtgogetter_rs" }
# For bundled fltk mode:

fltk-flex = "0.2.1"
fltk-grid = "0.4.0"
fltk-table = "0.3.1"
fltk-theme = "0.7.2"
flexi_logger = { version = "0.27", features = ["async", "specfile"] }
url.workspace = true
log.workspace = true
serde.workspace = true
toml.workspace = true
regex.workspace = true
chrono.workspace = true
once_cell.workspace = true

# Bundle FLTK for windows to avoid linker errors when cross-compiling
[target.'cfg(windows)'.dependencies]
fltk = { version = "1.4.30", features = ["fltk-bundled"] }

[target.'cfg(not(windows))'.dependencies]
fltk = { version = "1.4.30" } #, features = ["fltk-bundled"] }

[dev-dependencies]
pretty_assertions.workspace = true
temp-dir.workspace = true

[lints]
workspace = true
