[package]
name = "mtgoparser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
quick-xml = "0.31.0"
serde_derive = "1.0.188"
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }


[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
testresult = "0.4.0"
