[package]
name = "mtgoparser-rs"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
quick-xml.workspace = true
serde_json.workspace = true
chrono.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
temp-dir.workspace = true
testresult.workspace = true
