[package]
name = "mtgoupdater"
version.workspace = true
authors.workspace = true
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mtgo"]
description = "Library for interoperating with MTGO Collection manager's C++ and Go code"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
mtgoparser-rs = { path = "../mtgoparser-rs", version = "*" }
serde_json.workspace = true
chrono.workspace = true
serde.workspace = true
zip = "1.2.1"


[dev-dependencies]
pretty_assertions.workspace = true
temp-dir.workspace = true

[lints]
workspace = true
