[package]
name = "mtgoupdater"
readme = "README.md"
description = "Library for interoperating with MTGO Collection manager's C++ and Go code"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
mtgoparser_rs = { path = "../mtgoparser_rs", version = "*" }
mtgogetter_rs = { path = "../mtgogetter_rs", version = "*" }
serde_json.workspace = true
chrono.workspace = true
serde.workspace = true
zip.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
temp-dir.workspace = true

[lints]
workspace = true
